--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,13 +1,16 @@
 .login-container {
-  background-color: #282c34;
-  border-radius: 10px;
-  padding: 20px;
+  text-align: center;
+  width: 80%;
+}
+@media (min-width: 600px) {
+  .login-container {
+    width: 60%;
+  }
 }
 
 .app {
   display: flex;
   align-items: center;
-  justify-content: center;
   flex-direction: column;
   height: 100vh;
 }
