--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 body {
-  background-color: #e9e7dcd2 !important;
+  background-color: #282c34 !important;
   color: white !important;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
