--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-body {
+/* body {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
-}
+  background-color: #fafafa;
+} */
